Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-15713

Round robin across nets can be broken

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.16.0
    • None
    • None
    • 3
    • 9223372036854775807

      This issue is very similar to LU-13575, but it relates to the round robin across multiple nets whereas that ticket was about round robin across interfaces within a single net.

      Currently if a peer has multiple network types (either multiple LNDs or multiple nets on their interfaces) there are situations where traffic can be routed to the interfaces on one net (like if a peer is talking to another peer that only has interfaces on one of the nets, or if interfaces go down on the other net for an extended period of time). This causes the peer net/local net sequence numbers to diverge in the same manner documented in LU-13575. This can cause future traffic to funnel to just one of the available nets leading to degraded performance.

            hornc Chris Horn
            hornc Chris Horn
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: